cmake_minimum_required(VERSION 2.8)
project(i3barout)
set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -lyajl -lasound -lpthread")
option(USE_ALSA "alsa" ON)
configure_file(${CMAKE_SOURCE_DIR}/config.hpp.cmake ${CMAKE_SOURCE_DIR}/config.hpp)
set(SOURCE classbase.cpp classbatt.cpp classhwmon.cpp classipv4.cpp classnvidia.cpp classrfkill.cpp classtime.cpp classwlan.cpp file.cpp input.cpp json.cpp main.cpp pid.cpp string.cpp)
if(USE_ALSA)
find_package(ALSA REQUIRED)
set(SOURCE ${SOURCE} classasound.cpp)
endif(USE_ALSA)
add_executable(${PROJECT_NAME} ${SOURCE})
install(TARGETS "i3barout" DESTINATION bin PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
